--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="Lstyle.css">
+    <link rel="stylesheet" type="text/css" href="Landing.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -22,9 +22,12 @@
 <body>
     <header>
         <nav>
+          <a href="landing.html">
             <div class="logo">
                 <img src="deli.png" alt="Company Logo">
             </div>
+        </a>
+        
 
             <form method="get" action="track.php" class="package-tracking-form">
             <label for="tracking-id"></label>
