get started button

--- a/landing.html
+++ b/landing.html
@@ -49,7 +49,7 @@
             <h1>Save Money.</h1>
             <p>Deliver with Speed and Precision.</p>
             <p>More Opportunities for SME's operating physically and online to scale effortlessly and affordably.</p>
-            <a href="signup.php" class="cta-button">Get Started</a>
+            <a href="Signup.php" class="cta-button">Get Started</a>
         </div>
     </section>
 
